--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@casl/vue": "2.2.1",
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
+    "@unhead/vue": "^1.8.12",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
-    "axios": "1.4.0",
+    "axios": "^1.4.0",
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
@@ -35,6 +37,7 @@
     "vue-router": "4.1.6",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "3.2.1",
     "webfontloader": "1.6.28"
   },
@@ -51,6 +54,7 @@
     "@iconify/tools": "2.2.6",
     "@iconify/vue": "4.1.1",
     "@intlify/unplugin-vue-i18n": "0.10.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "18.16.3",
     "@types/webfontloader": "1.6.35",
     "@typescript-eslint/eslint-plugin": "5.59.1",
@@ -66,6 +70,7 @@
     "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-unicorn": "46.0.0",
     "eslint-plugin-vue": "9.11.0",
+    "laravel-vite-plugin": "0.7.4",
     "postcss-html": "1.5.0",
     "stylelint": "14.15.0",
     "stylelint-config-idiomatic-order": "9.0.0",
@@ -80,8 +85,7 @@
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
     "vue-shepherd": "3.0.0",
-    "vue-tsc": "1.6.2",
-    "laravel-vite-plugin": "0.7.4"
+    "vue-tsc": "1.6.2"
   },
   "packageManager": "yarn@1.22.18",
   "resolutions": {
