--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
     "@unhead/vue": "^1.8.12",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
@@ -23,6 +24,7 @@
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
     "crypto-js": "^4.2.0",
+    "dropzone-vue3": "^1.0.2",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
